--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ notifications:
   email: false
 node_js: '8'
 install: npm install
-script: npm run validate
+script: npm run setup
 branches:
   only: master
