--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/plugin-syntax-dynamic-import": "7.0.0-beta.51",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
+    "@testing-library/jest-dom": "^5.11.1",
     "@testing-library/react": "^10.4.7",
     "babel-core": "7.0.0-bridge.0",
     "babel-loader": "^8.1.0",
